# IITB-Summer-of-Code

./: .gitignore  Loops practice.py  README.md  User Input.py  demo1.py  for loop.py  functions.py  variables.py
Week 1: Basic Python Learning/: Nested loops.py  TypeCasting.py  practice.py  while loop.py
Week 2- Machine Learning/: Decision Tree.ipynb  Dummy Variables & One Hot Encoding.ipynb  Hyper Parameter Tuning.ipynb  K Fold Cross Verification.ipynb  K Means Clustering.ipynb  K nearest neighbors classification .ipynb  L1 and L2 Regularization.ipynb  Linear Regression in Multiple Variables.ipynb  Linear Regression.ipynb  Naive Bayes Email Spam.ipynb  Naive Bayes Titanic Survival.ipynb  PCA.ipynb  Pandas.ipynb  Support Vector Machine.ipynb  Train Test Split.ipynb  bagging.ipynb  carprices.csv  hasbro.csv  logistic regression multiclass.ipynb  logistic regression.ipynb  random forest.ipynb
Week 3- Deep Learning/: Customer Churn.ipynb  Data Augmentation.ipynb  Digits Recognition Neural Network Tensorflow.ipynb  Digits Recognnition by Neural network.ipynb  GPU Performance Test.ipynb  Gradient Descent DL.ipynb  Handling Imbalanced Data.ipynb  Loss or Cost Function.ipynb  Matrix Math.ipynb  Neural Network From Scratch.ipynb  Precision and Recall.ipynb  Small Image Detection Using CNN.ipynb  Transfer Learning.ipynb  dropout_regularization_ann.ipynb  gd and sgd.ipynb
Week 4 - Introduction to LLM's/: Langchain.py
Week 5 + 6/: Data Cleaning.ipynb  Untitled.ipynb  data.yaml
Week 5 + 6/runs/detect/train-2/: args.yaml
Week 7 + 8/: main.py  pyproject.toml
(+35 files in other folders)
