[project]
name = "defekt-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.5.1",
    "opencv-python>=5.0.0.93",
    "pillow>=12.3.0",
    "requests>=2.34.2",
    "streamlit>=1.59.1",
    "ultralytics>=8.4.93",
]
